--- a/main_app/templates/jobs/jobs.html
+++ b/main_app/templates/jobs/jobs.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Job List</h1>
-{% for job in jobs_data %}
+{% for job in jobs %}
     <div class="card">
         <div class="card-content">
             <span class="card-title">{{job.company}}</span>
