--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>About</h1>
-<p>Getting a job post bootcamp can be jsut as tough as the bootcamp itself!</p>
+<p>Getting a job post bootcamp can be just as tough as the bootcamp itself!</p>
 <p>This app can be used to help stay organized throughout the job search!</p>
 {% endblock %}
