--- a/main_app/templates/jobs/jobs.html
+++ b/main_app/templates/jobs/jobs.html
@@ -3,13 +3,15 @@
 <h1>Job List</h1>
 {% for job in jobs %}
     <div class="card">
-        <div class="card-content">
-            <span class="card-title">{{job.company}}</span>
-            <p>Job Title: {{job.jobTitle}}</p>
-            <p>Description: {{job.description}}</p>
-            <p>Salary: {{job.salary}}</p>
-            <p>Contact Info: {{job.contactInfo}}</p>
-        </div>
+        <a href="{% url 'detail' job.id %}">
+            <div class="card-content">
+                <span class="card-title">{{job.company}}</span>
+                <p>Job Title: {{job.jobTitle}}</p>
+                <p>Description: {{job.description}}</p>
+                <p>Salary: {{job.salary}}</p>
+                <p>Contact Info: {{job.contactInfo}}</p>
+            </div>
+        </a>
     </div>
 {% endfor %}
 {% endblock %}
